# AI-Level-2-

ML1-Customer-Segmentation/: main.py  pyproject.toml
ML1-Customer-Segmentation-Interview-Starter/: main.py
ML1-Customer-Segmentation-Starter/: main.py  pyproject.toml
ML1-Customer-Segmentation-Starter-Updated/: replit.nix
ML1-Customer-Segmentation-Updated/: main.py
ML1-Disney-Movie-Clustering/: main.py  pyproject.toml
ML1-Disney-Movie-Clustering-Starter/: pyproject.toml
ML1-Disney-Movie-Clustering-Starter-Updated/: disney.csv  main.py
ML1-Disney-Movie-Clustering-Updated/: main.py  pyproject.toml  replit.nix
ML1-Flower-Clustering/: main.py  pyproject.toml.backup
ML2-KNN-Car-Classification/: cars.csv  main.py  pyproject.toml  replit.nix
ML2-KNN-Car-Classification-Starter/: main.py  pyproject.toml
ML2-KNN-Customer-Segmentation-Classification/: main.py  pyproject.toml
ML2-KNN-Customer-Segmentation-Classification-Updated/: main.py  pyproject.toml  replit.nix
ML3-Naive-Bayes-Iris-Flowers-Classification/: main.py  pyproject.toml  replit.nix
ML4-Neuron-Implementation/: main.py
ML4-Simple-Neural-Network/: main.py
ML5-Simple-Linear-Regression/: main.py  pyproject.toml
ML5-Simple-Linear-Regression-Starter/: main.py  pyproject.toml
ML5-Simple-Polynomial-Regression/: pyproject.toml
ML5-Simple-Polynomial-Regression-Starter/: main.py  pyproject.toml
ML5-Simple-Polynomial-Regression-Updated/: replit.nix
ML_Simple-Polynomial-Regression-Starter-Updated/: main.py
ML_Simple-Polynomial-Regression-Updated/: main.py  pyproject.toml
