[tool.poetry]
name = "disney-movie-clustering"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0"
sklearn = "^0.0.0"

[tool.poetry.dev-dependencies]
urllib3 = "1.26.15"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
